--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Receiver</string>
+    <string name="Usersnumbers">Current Number of Users in Cloud DB</string>
+    <string name="show_users">Show Users</string>
+    <string name="num">Loading...</string>
 </resources>
